# aardvark

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.md  README.md  TODO.md  aardvarktodo.md  build.js  installer.nsi  packagebuild.js
.github/workflows/: main_build.yml
Aardvark/: Aardvark.nsight-gfxproj
data/: aardvark.vrmanifest  credits.txt  runaardvark.bat  third_party_licenses.txt  web_third_party_licenses.txt
data/input/: aardvark_actions.json  aardvark_binding_knuckles.json  aardvark_binding_oculus_touch.json  aardvark_binding_reverbg2_controller.json  aardvarkxr_aardvark_binding_vive_controller.json  aardvarkxr_binding_holographic_controller.json
data/models/: aardvark.glb  arrow.blend  arrow.glb  arrow_flat.glb  barcode_reader.glb  bounding_box.blend  bounding_box.glb  box.blend  box.glb  bracelet.blend  bracelet.glb  calculator.glb  controller.blend  controller_Infographic.glb  cylinder.blend  cylinder.glb  drop_attract.blend  drop_attract.glb  error.glb  flask.glb  gear.blend  gear.glb  hammerwrench.glb  hand.glb  hand_left.glb  hand_mirror.glb  hand_right.glb  head.glb  hook.blend  hook.glb  magnet_closed.glb  magnet_open.glb  minus.blend  minus.glb  network.glb  plus.blend  plus.glb  rocketship.blend  rocketship.glb  room.glb  (+10 more)
data/server/: server_bundle.js
data/shaders/: Compiling_Shaders.md  pbr.vert  pbr.vert.spv  pbr_khr.frag  pbr_khr.frag.spv  varggles.frag  varggles.frag.spv  varggles.vert  varggles.vert.spv
data/webui/: aardvark_master.html  scenegraphtest.html
docs/: _config.yml  index.md  interfaces.md
docs/aardvark-react/: globals.html  index.html
docs/getting_started/: _config.yml  index.md
docs/watch_tutorial/: index.md
notes/: TODO.txt  requirements and commands.txt
src/: CMakeLists.txt  aardvark.sln  makelinks.bat
src/aardvark/: CMakeLists.txt  aardvark.capnp  aardvark.capnp.c++  aardvark.capnp.h  aardvark.vcxproj  aardvark.vcxproj.filters  aardvark_app_impl.cpp  aardvark_app_impl.h  aardvark_apps.cpp  aardvark_client.cpp  aardvark_frame_impl.cpp  aardvark_frame_impl.h  aardvark_frames.cpp  aardvark_gadget_impl.cpp  aardvark_gadget_impl.h  aardvark_gadget_manifest.cpp  aardvark_gadgets.cpp  aardvark_grabbable_processor.cpp  aardvark_grabbable_processor.h  aardvark_grabber_processor.cpp  aardvark_grabber_processor.h  aardvark_handle.cpp  aardvark_handle.h  aardvark_model_instance_impl.cpp  aardvark_model_instance_impl.h  aardvark_model_source_impl.cpp  aardvark_model_source_impl.h  aardvark_panel_handler.cpp  aardvark_panel_handler.h  aardvark_panel_processor.cpp  aardvark_poker_handler.cpp  aardvark_poker_handler.h  aardvark_poker_processor.cpp  aardvark_poker_processor.h  aardvark_renderer_config.cpp  aardvark_scene_graph.cpp  aardvark_server.cpp  aardvark_transform.cpp  aardvark_transform.h  filetools.cpp  (+6 more)
src/avrenderer/: CMakeLists.txt  aardvark_renderer.cpp  aardvark_renderer.h  av_cef_app.cpp  av_cef_app.h  av_cef_handler.cpp  av_cef_handler.h  av_cef_handler_win.cpp  av_cef_javascript.cpp  av_cef_javascript.h  avrenderer.rc  avrenderer_main.cpp  avserver.cpp  avserver.h  collision_tester.cpp  collision_tester.h  iapplication.h  intersection_tester.cpp  intersection_tester.h  irenderer.h  ivrmanager.h  javascript_object.cpp  javascript_object.h  javascript_renderer.cpp  javascript_renderer.h  pending_transform.cpp  pending_transform.h  registerapp.bat  resource.h  scene_listener.cpp  scene_listener.h  scene_traverser.cpp  scene_traverser.h  unregisterapp.bat  uri_request_handler.cpp  uri_request_handler.h  vrmanager.cpp  vrmanager.h
src/avrenderer/GPUCache/: data_0  index
src/cmake/: cef_variables.cmake
src/crashwrapper/: CMakeLists.txt  crashwrapper.cpp
src/gltfpbr_base/: CMakeLists.txt  VulkanDevice.hpp  VulkanExampleBase.cpp  VulkanExampleBase.h  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanUtils.hpp  VulkanglTFModel.hpp  descriptormanager.cpp  descriptormanager.h  macros.h  ui.hpp  vulkanutils.cpp
src/public/aardvark/: aardvark.h  aardvark_apps.h  aardvark_client.h  aardvark_frames.h  aardvark_gadget_manifest.h  aardvark_gadgets.h  aardvark_renderer_config.h  aardvark_scene_graph.h  aardvark_server.h  aardvark_transform.h  aardvark_types.h  input_types.h  irenderer.h  ivrmanager.h
src/public/crashwrapper/: crashwrapper.h
src/public/tools/: capnprototools.h  filetools.h  logging.h  pathtools.h  stringtools.h  systools.h
src/tests/: CMakeLists.txt  test_aardvark_apps.cpp  test_frames.cpp  test_gadget.cpp  test_models.cpp  test_tools.cpp  tests.cpp  tests.vcxproj  tests.vcxproj.filters  testutils.cpp  testutils.h
src/tools/: CMakeLists.txt  base64.cpp  filetools.cpp  logging.cpp  pathtools.cpp  stringtools.cpp  systools.cpp
websrc/: .gitignore  LICENSE  aardvark.code-workspace  build_license_file.js  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
websrc/__tests__/: endpoint-test.ts  test_aardvark_input.ts
websrc/aardvark_master/: gadget_manifest.json  manifest.webmanifest
websrc/aardvark_monitor/: gadget_manifest.json  manifest.webmanifest
websrc/aardvark_renderer/: gadget_manifest.json  manifest.webmanifest  test_models.ts
websrc/avcmd/: avcmd.ts
websrc/calculator/: gadget_manifest.json
websrc/charm_bracelet/: gadget_manifest.json
websrc/common/: aardvark.ts  aardvark_traverser.ts  croquet_utils.ts  hook_utils.ts  monitor_store.ts  net_chamber.ts  net_chamber_directory.ts  net_user.ts  sentry_utils.ts  testutils.ts  version.ts
websrc/control_panel/: gadget_manifest.json
websrc/control_test/: gadget_manifest.json  manifest.webmanifest
websrc/customTypes/: ipfs.d.ts  loaders.d.ts
websrc/default_hand/: gadget_manifest.json  index.html
websrc/default_hands/: gadget_manifest.json  manifest.webmanifest
websrc/default_poker/: index.html
websrc/desktop_window/: manifest.webmanifest
websrc/dev_tools/: manifest.webmanifest
websrc/gadget_installer/: gadget_manifest.json
websrc/gadget_menu/: gadget_manifest.json  manifest.webmanifest
websrc/hand_mirror/: gadget_manifest.json  manifest.webmanifest
websrc/messagebox/: manifest.webmanifest
(+283 files in other folders)
